Importando Projetos Comuns

--- a/Tarefas.csproj
+++ b/Tarefas.csproj
@@ -1,45 +1,3 @@
-<Project DefaultTargets="Compile">
-    <PropertyGroup>
-        <ArquivoSaida>bin\Tarefas.exe</ArquivoSaida>
-    </PropertyGroup>
-
-    <PropertyGroup>
-        <ArquivoSaida>bin\Program.exe</ArquivoSaida>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <!-- <Arquivos Include="ListaTarefas.cs"/>
-        <Arquivos Include="Tarefa.cs"/>
-        <Arquivos Include="Categoria.cs"/>
-        <Arquivos Include="RelatorioDePendencias.cs" /> -->
-        <Arquivos Include="**\*.cs" Exclude="**\Program.cs" />
-    </ItemGroup>
-
-    <Target Name="PropriedadesReservadas">
-        <Message Text="$(MsBuildProjectFile)" />
-    </Target>
-
-    <Target Name="ArquivosParaCompilar">
-        <Message Text="@(Arquivos)" />
-    </Target>
-    <Target Name="Inicio" BeforeTargets="Compile">
-        <Message Text="Início da execução do script de compilação..." />
-    </Target>
-
-    <Target Name="Fim" AfterTargets="Compile">
-        <Message Text="Término da execução do script de compilação..." />
-    </Target>
-
-    <Target Name="Clean" >
-        <Delete Files="$(ArquivoSaida)" />
-        <RemoveDir Directories="bin" />
-    </Target>
-
-    <Target Name="Compile">
-        <MakeDir Directories="bin" />
-        <Csc Sources="@(arquivos)"  OutputAssembly="$(ArquivoSaida)" />
-    </Target>
-
-    <Target Name="Recompile" DependsOnTargets="Clean;Compile">
-    </Target>
+<Project>
+    <Import Project=".\Shared\Comum.csproj" />
 </Project>
