--- a/Financas/Financas.csproj
+++ b/Financas/Financas.csproj
@@ -1,3 +1,5 @@
-<Project>
-    <Import Project="..\Shared\Comum.targets" />
+<Project Sdk="Microsoft.Net.Sdk">
+    <PropertyGroup>
+        <TargetFramework>net5.0</TargetFramework>
+    </PropertyGroup>
 </Project>
