--- a/Financas/Financas.csproj
+++ b/Financas/Financas.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.Net.Sdk">
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 </Project>
