--- a/ProjetoWeb/financas/web/FinancasWeb.csproj
+++ b/ProjetoWeb/financas/web/FinancasWeb.csproj
@@ -3,7 +3,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
-    <!-- <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App" />
-    </ItemGroup> -->
+    <ItemGroup>
+        <ProjectReference Include="..\biblioteca\Financas.csproj" />
+    </ItemGroup>
+
 </Project>
